se cambia nombre del paquete en packaje.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links",
+  "name": "mdlinks-dlmp",
   "version": "1.0.0",
   "description": "Herramienta que usa Node.js, que lee y analiza archivos .md para verificar los link que contiene y retornar algunas estadisticas ",
   "main": "index.js",
